--- a/public/search.html
+++ b/public/search.html
@@ -43,7 +43,7 @@
     <!-- Main Container -->
     <div class="container" id="content">
 
-        <div class="row">
+        <div class="row petJ">
                 <h3 id="filter"> Filter
 
                         <input id="breed" type="text">
@@ -53,7 +53,7 @@
         </div>
         
 
-        <div class="row form-group">
+        <div class="row form-group petJ">
             <ul id="petContent">
 
             </ul>
@@ -63,7 +63,7 @@
         </div>
 
 
-        <div class="jumbotron" id="petJumbotron">
+        <div class="jumbotron  petJ" id="petJumbotron">
             <div class="row" >
 
                 <div class="col-lg-6" id="petImage">
