added login feature

--- a/public/about.html
+++ b/public/about.html
@@ -35,7 +35,7 @@
 
 <div class="container" id = "content">
     <div class="jumbotron">
-            <h2> About us</h2>
+            <h2 class="aboutCol"> About us</h2>
 
             <div class="row">
                 <div class="col-lg-12">
@@ -45,14 +45,14 @@
                 <div class="col-lg-12">
                     <br><p> Dallas Pet Adoption is a non-profit organization based in Dallas- Fort Worth, Texas which was launched in 2018. Our organization main goal is to make sure the animals find suitable homes.  </p>
 
-                    <h3><b>Mission </b> </h3>
+                    <h3 class="aboutCol"><b>Mission </b> </h3>
 
                     <p> Our mission is to increase public awareness about the availability of high-quality adoptable pets and increase the overall effectiveness of pet adoption programs.</p>
                     <p> Our website allows pet lovers search pets that best match their needs. There is various information available and users are encouraged to discover what services we offer. </p>
                 </div>
 
                 <div class="col-lg-12">
-                    <h3> <b> Core Values</b> </h3> <br>
+                    <h3 class="aboutCol"> <b> Core Values</b> </h3> <br>
                     <ul > 
                         <li style="display:inline; margin-right: 100px"> Respect </li>
                         <li style="display: inline; margin-right: 100px"> Commitment</li>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="col-lg-12">
-                    <h3><b> FAQ </b></h3>
+                    <h3 class="aboutCol"><b> FAQ </b></h3>
 
                     <p>
                         How do I search for a pet?
