--- a/public/search.html
+++ b/public/search.html
@@ -19,22 +19,28 @@
     <div class="header">
         <nav class="navbar navbar-default navigation-clean-button">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand" href="/">DPA</a>
+                <div class="navbar-header"><a class="navbar-brand" href="/"><img id="logo" class="logo" src="/images/DPALogo.png">
+                    </a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle
                             navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
 
-                        <li><a href="/about">About</a></li>
-                        <li class="active"><a href="/search">Browse</a></li>
-                        <li><a href="#">Events</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a class="navLink" href="/about">About</a></li>
+                        <li><a class="navLink" href="/search">Browse</a></li>
+                        <li><a class="navLink" href="/contact">Contact</a></li>
+
+
                     </ul>
-                    <p class="navbar-text navbar-right actions"><a class="navbar-link login" data-toggle="modal"
-                            data-target="#userModal">Log In</a> <a class="btn btn-default action-button" role="button"
-                            data-toggle="modal" data-target="#userModal">Sign Up</a></p>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li> <a class="navLink" href="/signin"> Sign In</a> </li>
+                        <li> <a class="navLink" href="/signup"> Sign Up</a> </li>
+                    </ul>
                 </div>
+
+
             </div>
         </nav>
     </div>
@@ -44,36 +50,26 @@
     <div class="container" id="content">
 
         <div class="row petJ">
-                <h3 id="filter"> Filter
-
-                        <input id="breed" type="text">
-                    </h3>
-
-                   
+            <h3 id="filter"> Filter
+                <input id="breed" type="text">
+            </h3>
         </div>
-        
+
 
         <div class="row form-group petJ">
             <ul id="petContent">
 
             </ul>
-
-
-
         </div>
 
 
         <div class="jumbotron  petJ" id="petJumbotron">
-            <div class="row" >
-
+            <div class="row">
                 <div class="col-lg-6" id="petImage">
-
                 </div>
                 <div class="col-lg-6" id="petInfo">
-
                 </div>
             </div>
-
         </div>
 
 
@@ -82,107 +78,35 @@
 
 
 
-    <!-- Info Modal-->
-    <div class="modal fade" id="infoModal" role="dialog">
+
+    <!-- Admin Modal-->
+    <div class="modal fade" id="adminModal" role="dialog">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content  text-center">
                 <div class="modal-header">
-                    <h2 class="modal-title">Pet information</h2>
+                    <h2 class="modal-title">Admin Login</h2>
                 </div>
                 <div class="modal-body">
-                    <h3 id="petInfo"></h3>
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="adminName">Usename</label><input type="text" class="form-control input-sm adminName"
+                                placeholder="Username" name="adminName">
+                        </div> <br><br>
+                        <div class="form-group">
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <label class="sr-only" for="adminPW">Password</label>
+                            <input type="password" class="form-control input-sm adminPW" placeholder="Password" name="adminPW">
+                        </div><br><br>
+                        <div class="form-group" id="adminErr"> </div>
+                        <br>
+                        <button type="submit" class="btn btnColor adminSubmit">Login</button>
+                        <button type="button" class="btn btn-danger action-button cancel" data-dismiss="modal">Cancel</button>
+
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
-
-    <!-- User Modal -->
-    <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content text-center">
-
-                <div class="modal-body text-center">
-                    <div role="tabpanel">
-                        <!-- Nav tabs -->
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li><a href="#loginTab" aria-controls="loginTab" role="tab" data-toggle="tab">Login</a>
-
-                            </li>
-                            <li class="active"><a href="#signupTab" aria-controls="signupTab" role="tab" data-toggle="tab">Sign
-                                    up</a>
-
-                            </li>
-                        </ul>
-                        <!-- Tab panes -->
-                        <div class="tab-content">
-                            <div role="tabpanel" class="tab-pane " id="loginTab">
-
-                                <form class="form-inline">
-                                    <br>
-                                    <div class="form-group">
-                                        <label class="sr-only" for="email">Email</label><input type="text" class="form-control input-sm email"
-                                            placeholder="Email" name="email">
-                                    </div> <br><br>
-                                    <div class="form-group">
-
-                                        <label class="sr-only" for="password">Password</label>
-                                        <input type="password" class="form-control input-sm pw" placeholder="Password"
-                                            name="password">
-                                    </div><br><br>
-
-
-                                    <button type="submit" class="btn btn-info login ">Login</button>
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                </form>
-
-                            </div>
-
-                            <div role="tabpanel" class="tab-pane active" id="signupTab">
-
-                                <form class="form-inline">
-                                    <br>
-                                    <div class="form-group">
-                                        <label class="sr-only" for="fName">First Name</label><input type="text" class="form-control input-sm"
-                                            placeholder="First Name" id="fName" name="fName">
-                                    </div> <br><br>
-                                    <div class="form-group">
-                                        <label class="sr-only" for="lName">Last Name</label><input type="text" class="form-control input-sm"
-                                            placeholder="Last Name" id="lName" name="lName">
-                                    </div> <br><br>
-                                    <div class="form-group">
-                                        <label class="sr-only" for="email">Email</label><input type="text" class="form-control input-sm"
-                                            placeholder="Email" id="email" name="email">
-                                    </div> <br><br>
-                                    <div class="form-group">
-
-                                        <label class="sr-only" for="password">Password</label>
-                                        <input type="password" class="form-control input-sm" placeholder="Password" id="password"
-                                            name="password">
-                                    </div><br><br>
-
-
-
-                                    <button type="submit" class="btn btn-info signup">Sign up</button>
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                </form>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
 
 
 
@@ -190,15 +114,15 @@
     <!-- footer -->
     <footer id="myFooter">
         <div class="container">
-            <div class="row" >
-                <div class="col-sm-3" >
-                    <h2 class="logo"><a href="/"> DPA </a></h2>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h2 class="logo"><a href="/"> <img src="/images/footerLogo.png" height="120px" width="150px"> </a></h2>
                 </div>
                 <div class="col-sm-2">
                     <h5>Get started</h5>
-                    <ul  >
-                        <li ><a  href="/">Home</a></li>
-                        <li><a data-toggle="modal" data-target="#userModal">Sign up</a></li>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/signup">Sign up</a></li>
                         <li><a href="/search">Browse</a></li>
                     </ul>
                 </div>
@@ -216,6 +140,12 @@
                         <li><a href="/api/users"> API Users</a></li>
                     </ul>
                 </div>
+                <div class="col-sm-2">
+                    <h5>Employee Links</h5>
+                    <ul>
+                        <li><a data-toggle="modal" data-target="#adminModal"> Admin Login</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer-copyright">
@@ -227,7 +157,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/js/users.js"></script>
     <script src="/js/pets.js"></script>
+
 
 </body>
 
