styled about page

--- a/public/about.html
+++ b/public/about.html
@@ -5,8 +5,9 @@
     <title>About</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -46,12 +47,12 @@
     <div class="container" id="content">
         <div class="jumbotron">
             <h2 class="aboutCol"> About us</h2>
-
+            <br>
             <div class="row">
                 <div class="col-lg-12">
                     <img id="aboutImage" src="/images/aboutimage.jpg">
                 </div>
-
+                <br>
                 <div class="col-lg-12">
                     <br>
                     <p> Dallas Pet Adoption is a non-profit organization based in Dallas- Fort Worth, Texas which was
@@ -68,12 +69,12 @@
 
                 <div class="col-lg-12">
                     <h3 class="aboutCol"> <b> Core Values</b> </h3> <br>
-                    <ul>
-                        <li style="display:inline; margin-right: 100px"> Respect </li>
-                        <li style="display: inline; margin-right: 100px"> Commitment</li>
-                        <li style="display: inline; margin-right: 100px"> Positivity</li>
-                        <li style="display: inline; margin-right: 100px">Honesty</li>
-                        <li style="display: inline; margin-right: 100px">Excellent Service</li>
+                    <ul class = "coreValues">
+                        <li style="display:inline; margin-right: 50px"> <i class="fa fa-star" aria-hidden="true"></i>  Respect </li>
+                        <li style="display: inline; margin-right: 50px"> <i class="fa fa-star" aria-hidden="true"></i>  Commitment</li>
+                        <li style="display: inline; margin-right: 50px"><i class="fa fa-star" aria-hidden="true"></i>  Positivity</li>
+                        <li style="display: inline; margin-right: 50px"><i class="fa fa-star" aria-hidden="true"></i> Honesty</li>
+                        <li style="display: inline; margin-right: 50px"><i class="fa fa-star" aria-hidden="true"></i> Excellent Service</li>
                     </ul>
                 </div>
 
@@ -82,32 +83,32 @@
 
                     <p>
                         How do I search for a pet?
-                        <li> You can begin your search immediately by using the browse tab above which will route you
+                        <br> <i class="fa fa-arrow-right" aria-hidden="true"></i> You can begin your search immediately by using the browse tab above which will route you
                             to a list of all pets in our database. You will be able to choose the pets based on type or
-                            breed.</li>
+                            breed.
                     </p>
 
                     <p>
                         How often is the website updated?
-                        <li> The website is updated at the end of the day everyday as we continue to add a list of pets
-                            daily.</li>
+                       <br> <i class="fa fa-arrow-right" aria-hidden="true"></i> The website is updated at the end of the day everyday as we continue to add a list of pets
+                            daily.
                     </p>
 
                     <p>
                         Do i need to apply to Dallas Pet Adoption?
-                        <li> No. Once you have made a request for more information, our reps will reach out with you to
-                            set up a quick meetup to determite whether it's a match.</li>
+                       <br> <i class="fa fa-arrow-right" aria-hidden="true"></i> No. Once you have made a request for more information, our reps will reach out with you to
+                            set up a quick meetup to determite whether it's a match.
                     </p>
 
                     <p>
                         How long does it take to hear back?
-                        <li> Once a request is made, our reps reach out to you within 3-5 business days.</li>
+                       <br> <i class="fa fa-arrow-right" aria-hidden="true"></i>Once a request is made, our reps reach out to you within 3-5 business days.
                     </p>
 
                     <p>
                         Where can i get more detailed information about a pet?
-                        <li> In order to receive more detailed information, click the contact tab and once we receive
-                            your message we can send you the detailed information.</li>
+                       <br> <i class="fa fa-arrow-right" aria-hidden="true"></i>In order to receive more detailed information, click the contact tab and once we receive
+                            your message we can send you the detailed information.
                     </p>
                 </div>
             </div>
