--- a/public/signup.html
+++ b/public/signup.html
@@ -40,32 +40,36 @@
 
     <!-- Main Container -->
     <div class="container">
-        <div class="jumbotron text-center">
+        <div class="jumbotron text-center signJumbo">
             <div class="header ">
                 <h1>Sign Up </h1>
             </div>
-            <hr>
-            <form id="signup" name="signup" method="post" action="/signup">
-
-                <div class="form-group">
-                    <input class="form-control" name="firstname" required type="text" placeholder="First Name" />
-                </div>
+            <hr><br>
+            <form  class = "inline" id="signup" name="signup" method="post" action="/signup">
+               
+                  
+                <div class="form-group ">
+                    <input class="form-control mb-2" name="firstname" required type="text" placeholder="First Name" />
+                </div> <br>
                 <div class="form-group">
                     <input class="form-control" name="lastname" required type="text" placeholder="Last Name" />
-                </div>
+                </div> <br>
                 <div class="form-group">
                     <input class="form-control " name="email" type="email" required placeholder="Email Address" />
-                </div>
+                </div> <br>
 
                 <div class="form-group">
                     <input class="form-control " name="password" type="password" required placeholder="Password" />
-                </div>
+                </div><br>
                 <div class="form-group">
                     <input class="btn btnColor action-button" type="submit" value="Sign Up" />
                     <input type="button" class="btn btn-danger action-button signinCancel" id="cancel" value="Cancel" />
 
                 </div>
-
+                <br>
+                <div class="form-group">
+                    Already have an account? <a href = "/signin"> Sign In</a>
+                </div>
             </form>
 
         </div>
