added user page

--- a/public/admin.html
+++ b/public/admin.html
@@ -124,9 +124,9 @@
 
                                         </div>
                                         <div class="col-md-6 form-group" id="updateInfo">
-                                                
+
                                         </div>
-                                      
+
                                 </div>
                         </div> <br>
                 </div>
@@ -155,8 +155,7 @@
                                                 <div class="form-group" id="adminErr"> </div>
                                                 <br>
                                                 <button type="submit" class="btn btnColor adminSubmit">Login</button>
-                                                <button type="button" class="btn btn-danger action-button cancel"
-                                                        data-dismiss="modal">Cancel</button>
+                                                <button type="button" id="adminCancel" data-dismiss="modal">Cancel</button>
 
                                         </form>
                                 </div>
