--- a/public/user.html
+++ b/public/user.html
@@ -65,14 +65,25 @@
                 <button class="btn btnColor" type="button" data-toggle="collapse" data-target="#req" aria-expanded="false" aria-controls="req">
                   Make a request
                 </button>
+                <button class="btn btnColor" type="button" data-toggle="collapse" data-target="#inq" aria-expanded="false" aria-controls="inq">
+                        View Inquiries Made
+                      </button>
               </p>
               <div class="collapse" id="req">
                 <div class="card card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                  <h3><b>Choose a pet</b></h3> 
+
+                  <select class="custom-select" id = "adminContent">
+
+                  </select><br>
+                  <button class="btn btn-success action-button" id="confirmReq"> Select</button> <br><br>
+                </div>
+                <div id = "reqContent">
+
                 </div>
               </div>
-              
-            <div class="row ">
+
+            <div class="collapse" id="inq">
                 <h3><b> Your Inquiries</b></h3>
 
 
