--- a/public/about.html
+++ b/public/about.html
@@ -45,7 +45,7 @@
 
     <!-- Main container-->
     <div class="container" id="content">
-        <div class="jumbotron">
+        <div class="jumbotron containerBox">
             <h2 class="aboutCol"> About us</h2>
             <br>
             <div class="row">
