--- a/public/contact.html
+++ b/public/contact.html
@@ -45,7 +45,7 @@
 
     <!-- Contact Form container-->
     <div class="container" id="content">
-        <div class="jumbotron">
+        <div class="jumbotron containerBox">
 
             <h2>Contact Us</h2>
             <hr>
