--- a/public/admin.html
+++ b/public/admin.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    
         <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -114,8 +115,8 @@
                                                         <select class="custom-select" id="adminContent">
 
                                                         </select> <br> <br>
-                                                        <button class="btn btnColor" id="petSubmit"> Select </button>
-                                                        <button type="button" class="btn btn-danger  action-button cancelEdit">Cancel</button>
+                                                        <button class="btn action-button btn-success" id="petSubmit"> Select </button>
+                                                       
                                                 </div>
                                         </div>
                                 </div>
