--- a/public/user.html
+++ b/public/user.html
@@ -115,6 +115,27 @@
 
 
 
+<!-- Request Modal -->
+<div class="modal fade" id="requestModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title">Thank you</h2>
+                </div>
+                <div class="modal-body contact">
+                    <h4> Thank you for for your request. Our representatives will be reaching out to you shortly.</h4>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
     <!-- Admin Modal-->
     <div class="modal fade" id="adminModal" role="dialog">
